<resources>
    <string name="app_name">MENUW</string>

    <!--    home page-->
    <string name="home_tab_refrigerator">냉장고 재료</string>
    <string name="home_tab_like_menu">좋게 평가한 메뉴</string>
    <string name="like_menu_list_content">아직 좋게 평가한 메뉴가 없어요!\n메뉴를 추천받고 평가해 보세요</string>

    <!--    category-->
    <string name="menu_category_title">선호하는 카테고리</string>
    <string name="category_recipe_title">선호하는 조리 방식을 골라보세요! (1/2)</string>
    <string name="category_type_title">선호하는 요리 종류를 골라보세요! (2/2)</string>

    <!--    recommend menu-->
    <string name="menu_recommend_title">추천된 메뉴 리스트를 확인해보세요!</string>
    <string name="menu_not_recommend_title">추천된 메뉴 리스트 이외에 재료를 활용하는 메뉴를 확인해보세요!</string>

    <!--    recipe page-->
    <string name="recipe_page_title">조리법</string>

    <!--    my page-->
    <string name="mypage_delete_user">회원탈퇴</string>
    <string name="mypage_setting">설정</string>
    <string name="mypage_notice">공지사항</string>
    <string name="mypage_qna">문의하기</string>
    <string name="mypage_policy">약관 및 정책</string>
    <string name="mypage_version">버전 정보 1.0.0</string>
    <string name="mypage_logout">로그아웃</string>

    <!--    main page -->
    <string name="main_bnv_refrigerator">냉장고페이지</string>
    <string name="main_bnv_home">홈</string>
    <string name="main_bnv_person">마이페이지</string>

    <!--    refrigerator page -->
    <string name="refrigerator_title_text">냉장고 페이지</string>
    <string name="refrigerator_see_recommend">추천 레시피 보기</string>
    <string name="refrigerator_add_ingredient">재료 추가하기</string>
    <string name="refrigerator_add_ingredient_btn">재료 추가하기</string>
    <string name="refrigerator_add_ingredient_text">재료를 추가해 보세요!</string>
    <string name="refrigerator_edit">편집</string>
    <string name="refrigerator_edit_cancel">취소</string>
    <string name="refrigerator_delete">삭제하기</string>

    <!--    home page-->
    <string name="home_recommend_title">추천 레시피 보기</string>
    <string name="home_recommend_sub">사용자의 선호하는\n레시피를 추천해요!</string>
    <string name="home_weather_title">추천 메뉴 보기</string>
    <string name="home_weather_sub">오늘의 날씨를 기반으로\n레시피를 추천해요!</string>
    <string name="home_title">홈 페이지</string>

    <!--    person page-->
    <string name="person_title">개인 페이지</string>

    <!--    update dialog-->
    <string name="dialog_update_content">해당 기능은 업데이트 예정이에요!</string>
    <string name="dialog_update_title">해당 기능은 업데이트 예정이에요!</string>
    <string name="dialog_update_btn_text">확인</string>

    <string name="blank"> </string>
</resources>