<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bright_fill_10_rect"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_dialog_update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_update_title"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_dialog_update_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/dialog_update_content"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@id/tv_dialog_update_title"
        app:layout_constraintEnd_toEndOf="@id/tv_dialog_update_title"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_update_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_dialog_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="30dp"
        android:paddingVertical="15dp"
        android:text="@string/dialog_update_btn_text"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/bright"
        android:background="@drawable/shape_green_fill_10_rect"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_update_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>