<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_mypage_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="42dp"
            android:src="@drawable/left_arrow"
            android:padding="5dp"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_mypage_title"
            style="@style/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypage_setting"
            android:textSize="23dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_mypage_back" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/mypage_user_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_mypage_title">

            <ImageView
                android:id="@+id/iv_mypage_user_img"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="23dp"
                android:background="@drawable/mypage_info_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_mypage_user_nickname"
                style="@style/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:text="김미에뉴"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold"
                android:includeFontPadding="false"
                app:layout_constraintStart_toEndOf="@id/iv_mypage_user_img"
                app:layout_constraintTop_toTopOf="parent" />

<!--            <TextView-->
<!--                android:id="@+id/tv_mypage_"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:layout_marginBottom="16dp"-->
<!--                android:text="menuw.google.com"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="14dp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintStart_toEndOf="@id/iv_mypage_user_img" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_mypage_notice"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/mypage_etc_top"
            android:gravity="center_vertical"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingStart="18dp"
            android:paddingEnd="270dp"
            android:text="@string/mypage_notice"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:outlineProvider="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_mypage_qna"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/mypage_etc_no_bottom"
            android:gravity="center_vertical"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingStart="18dp"
            android:paddingEnd="270dp"
            android:text="@string/mypage_qna"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:outlineProvider="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_mypage_notice" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_mypage_policy"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/mypage_etc_no_bottom"
            android:gravity="center_vertical"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingStart="18dp"
            android:paddingEnd="270dp"
            android:text="@string/mypage_policy"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:outlineProvider="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_mypage_qna" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_mypage_version"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/mypage_etc_no_bottom"
            android:gravity="center_vertical"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingStart="18dp"
            android:paddingEnd="270dp"
            android:text="@string/mypage_version"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:outlineProvider="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_mypage_policy" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_mypage_logout"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/mypage_etc_bottom"
            android:gravity="center_vertical"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingStart="18dp"
            android:paddingEnd="270dp"
            android:text="@string/mypage_logout"
            android:textColor="@color/red"
            android:textSize="14dp"
            android:outlineProvider="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_mypage_version" />

        <TextView
            android:id="@+id/tv_mypage_delete_user"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="25dp"
            android:text="@string/mypage_delete_user"
            android:textSize="14dp"
            android:paddingVertical="5dp"
            android:includeFontPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_mypage_logout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>