<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.kaer.menuw.presentation.refrigerator.add.AddIngredientViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/tv_refrigerator_title_text"
            style="@style/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refrigerator_title_text"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_refrigerator_edit"
            style="@style/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.deleteBtnVisible ? @string/refrigerator_edit_cancel : @string/refrigerator_edit}"
            android:textSize="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_refrigerator_title_text"/>

        <TextView
            android:id="@+id/tv_refrigerator_background"
            style="@style/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refrigerator_add_ingredient_text"
            android:textSize="20dp"
            android:textColor="@color/green_primary"
            android:visibility="@{viewModel.backgroundTextVisible ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_refrigerator_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_refrigerator_title_text"
            app:layout_constraintBottom_toTopOf="@id/btn_refrigerator_see_recommend"
            tools:listitem="@layout/item_ingredient_list_add"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_refrigerator_see_recommend"
            style="@style/head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/refrigerator_see_recommend"
            android:paddingVertical="20dp"
            android:layout_marginBottom="20dp"
            android:outlineProvider="none"
            android:background="@drawable/shape_green_fill_10_rect"
            android:textColor="@color/bright"
            android:visibility="@{viewModel.deleteBtnVisible ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@id/btn_refrigerator_add_ingredient"
            app:layout_constraintStart_toStartOf="@id/btn_refrigerator_add_ingredient"
            app:layout_constraintEnd_toEndOf="@id/btn_refrigerator_add_ingredient" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_refrigerator_add_ingredient"
            style="@style/head"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/refrigerator_add_ingredient"
            android:paddingVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="34dp"
            android:outlineProvider="none"
            android:background="@drawable/shape_green_fill_10_rect"
            android:textColor="@color/bright"
            android:visibility="@{viewModel.deleteBtnVisible ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>